clusters/apps/headlamp/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  annotations:
    traefik.ingress.kubernetes.io/tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
  - host: headlamp.homelab.haseebmajid.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: headlamp
            port:
              number: 80
  tls:
  - hosts:
    - headlamp.homelab.haseebmajid.dev
    secretName: headlamp-tls
